# esphome-magnetometer-water-gas-meter

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.org  esphome-magnetometer.yaml  hmc5883lq.yaml  quadrature-water-meter.yaml
components/sensor_update/: __init__.py  sensor_update.cpp  sensor_update.h  sensor_update_api.h  sensor_update_api_mock.cpp  sensor_update_component.h
